test/corpus/enum.txt
================================================================================
Empty Enum definition
================================================================================

Enum enum_name {

}

--------------------------------------------------------------------------------

(document
  (enum
    (enum_name)))

================================================================================
Empty enum definition
================================================================================

enum enum_name {

}

--------------------------------------------------------------------------------

(document
  (enum
    (enum_name)))
