test/corpus/note.txt
================================================================================
Empty shortform Note definition
================================================================================

Note:

--------------------------------------------------------------------------------

(document
  (note))

================================================================================
Empty longform Note definition
================================================================================

Note {

}

--------------------------------------------------------------------------------

(document
  (note))

================================================================================
Empty longform Note definition with name
================================================================================

Note note_name {

}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)))

================================================================================
Empty shortform note definition
================================================================================

note:

--------------------------------------------------------------------------------

(document
  (note))

================================================================================
Empty longform note definition
================================================================================

note {

}

--------------------------------------------------------------------------------

(document
  (note))

================================================================================
Empty longform note definition with name
================================================================================

note name {

}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)))

================================================================================
Shortform Note definition
================================================================================

Note: "hello world"

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform Note definition
================================================================================

Note {
  "hello world"
}

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform Note definition with name
================================================================================

Note note_name {
  "hello world"
}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)
    (note_text)))

================================================================================
Shortform note definition
================================================================================

note: "hello world"

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform note definition
================================================================================

note {
  "hello world"
}

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform note definition with name
================================================================================

note name {
  "hello world"
}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)
    (note_text)))

================================================================================
Shortform multiline Note definition
================================================================================

Note: '''
  hello world
'''

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform Note definition
================================================================================

Note {
  '''
  hello world
  '''
}

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform Note definition with name
================================================================================

Note note_name {
  '''
  hello world
  '''
}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)
    (note_text)))

================================================================================
Shortform note definition
================================================================================

note: '''
  hello world
'''

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform note definition
================================================================================

note {
  '''
  hello world
  '''
}

--------------------------------------------------------------------------------

(document
  (note
    (note_text)))

================================================================================
Longform note definition with name
================================================================================

note name {
  '''
  hello world
  '''
}

--------------------------------------------------------------------------------

(document
  (note
    (note_name)
    (note_text)))
