test/corpus/table-group.txt
================================================================================
Empty TableGroup definition
================================================================================

TableGroup table_group_name {

}

--------------------------------------------------------------------------------

(schema
  (table_group
    (table_group_name)))

================================================================================
Empty tablegroup definition
================================================================================

tablegroup table_group_name {

}

--------------------------------------------------------------------------------

(schema
  (table_group
    (table_group_name)))

================================================================================
Table group definition
================================================================================

tablegroup table_group_name {
  table1
  table2
  table3
}

--------------------------------------------------------------------------------

(schema
  (table_group
    (table_group_name)
    (table_name)
    (table_name)
    (table_name)))
